added heading element

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head><title>empliz</title></head>
     <body bgcolor="blue">
-        empliz innovations pvt ltd.
+        <h1 align="center">empliz innovations pvt ltd.</h1><br>
+
+
     </body>
 </html>
